[gd_scene load_steps=7 format=2]

[ext_resource path="res://UnusedNodes/FruitMetter/fullMetter.png" type="Texture" id=1]
[ext_resource path="res://UnusedNodes/FruitMetter/emptyMetter.png" type="Texture" id=2]
[ext_resource path="res://UnusedNodes/FruitMetter/FruitMetter.gd" type="Script" id=3]
[ext_resource path="res://Scenes/DefaultWorld/Weapons/Pistol/TargetBoard/view_finder.png" type="Texture" id=4]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=5]


[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="FruitMetter" type="Control"]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="BottomPos" type="Position2D" parent="."]
position = Vector2( 23.5451, 454.925 )

[node name="TopPos" type="Position2D" parent="."]
position = Vector2( 22.7042, 1.68179 )

[node name="MiddlePos" type="Position2D" parent="."]
position = Vector2( 22.7042, 229.682 )

[node name="view_finder" type="Sprite" parent="MiddlePos"]
visible = false
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="MiddlePos"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -20.5
margin_right = 10.0
margin_bottom = 20.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.937255, 0.427451, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelVisibleTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="LabelVisibleTimer" to="." method="_on_LabelVisibleTimer_timeout"]
